Remove 1.5 dependency.